--- a/SimpleExt/SimpleExt.vcxproj
+++ b/SimpleExt/SimpleExt.vcxproj
@@ -200,16 +200,12 @@ echo regsvr32 exe. time &gt; "$(OutDir)regsvr32.trg"</Command>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <CustomBuildStep>
-      <Message>Performing registration</Message>
-      <Command>if (%SkipShellExtRegistration%)==() (
-echo Registering $(TargetFileName)
-regsvr32 /s /c "$(TargetPath)"
-) else (
-echo Skipping registration
-)
-
-echo regsvr32 exe. time &gt; "$(OutDir)regsvr32.trg"</Command>
-      <Outputs>$(OutDir)regsvr32.trg;%(Outputs)</Outputs>
+      <Message>
+      </Message>
+      <Command>
+      </Command>
+      <Outputs>
+      </Outputs>
     </CustomBuildStep>
     <Midl>
       <TypeLibraryName>.\ReleaseMinDependency/SimpleExt.tlb</TypeLibraryName>
@@ -231,6 +227,7 @@ echo regsvr32 exe. time &gt; "$(OutDir)regsvr32.trg"</Command>
       <ProgramDataBaseFileName>.\ReleaseMinDependency/</ProgramDataBaseFileName>
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
+      <AdditionalOptions>/D "_WIN32_WINNT=0x0501" %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
